--- a/dotenv_files/.env
+++ b/dotenv_files/.env
@@ -1,4 +1,4 @@
-SECRET_KEY="django-insecure-3#!7d^6nrh=kvdg_rj(=s-$e@v%&z1ox3j5@f_t4v8%t169rdn"
+SECRET_KEY="3TB{Z%hTw_@mIE)g~4e\jwW$q0Vga$wPN2$ghE12rPaQ/LNlwQs$T6!_x&lWh!"
 
 # 0 False, 1 True
 DEBUG="1"
@@ -6,9 +6,10 @@ DEBUG="1"
 # Comma Separated values
 ALLOWED_HOSTS="0.0.0.0,localhost,127.0.0.1"
 
-DB_ENGINE="django.db.backends.postgresql"
-POSTGRES_DB="my_database"
-POSTGRES_USER="postgres"
-POSTGRES_PASSWORD="postgres"
-POSTGRES_HOST="psql"
-POSTGRES_PORT="5432"
+DB_ENGINE="django.db.backends.mysql"
+MYSQL_DATABASE="my_database"
+MYSQL_USER="root"
+MYSQL_HOST="mysql"
+MYSQL_PORT="3306"
+MYSQL_ROOT_PASSWORD="123456"
+MYSQL_ROOT_HOST="%"
