--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,18 +7,18 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - ./model-chat:/model-chat
+      - ./backend/model-chat:/model-chat
       - ./data/web/static:/data/web/static/
       - ./data/web/media:/data/web/media/
     env_file:
-      - ./dotenv_files/.env
+      - ./backend/dotenv_files/.env
     depends_on:
-      - mysql
+      - psql
 
-  mysql:
-      container_name: mysql
-      image: mysql:8.2
-      volumes:
-        - ./data/mysql/data:/var/lib/mysql
-      env_file:
-        - ./dotenv_files/.env
+  psql:
+    container_name: psql
+    image: postgres:13
+    volumes:
+      - ./data/postgres/data:/var/lib/postgresql/data/
+    env_file:
+      - ./backend/dotenv_files/.env
