--- a/backend/dotenv_files/.env
+++ b/backend/dotenv_files/.env
@@ -6,10 +6,9 @@ DEBUG="1"
 # Comma Separated values
 ALLOWED_HOSTS="0.0.0.0,localhost,127.0.0.1"
 
-DB_ENGINE="django.db.backends.mysql"
-MYSQL_DATABASE="my_database"
-MYSQL_USER="root"
-MYSQL_HOST="mysql"
-MYSQL_PORT="3306"
-MYSQL_ROOT_PASSWORD="123456"
-MYSQL_ROOT_HOST="%"
+DB_ENGINE="django.db.backends.postgresql"
+POSTGRES_DB="my_database"
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="postgres"
+POSTGRES_HOST="psql"
+POSTGRES_PORT="5432"
