--- a/backend/dotenv_files/.env
+++ b/backend/dotenv_files/.env
@@ -15,4 +15,4 @@ POSTGRES_PORT="5432"
 
 # Rotas
 CURRENT_URL=http://127.0.0.1:8000/
-CORS_ALLOWED_ORIGINS=http://172.20.0.2:3000,http://172.20.0.3:3000  # IP usado pelo Frontend
+CORS_ALLOWED_ORIGINS=http://172.19.0.2:3000  # IP usado pelo Frontend
