--- a/frontend/dotenv_files/.env
+++ b/frontend/dotenv_files/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_BASE_URL=http://172.19.0.4:8000
+NEXT_PUBLIC_API_BASE_URL=http://172.20.0.4:8000  # IP do Backend
 NEXT_PUBLIC_AUTH_KEY=access_token
